--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
     />
     <link rel="modulepreload" href="./chuck-wallet-df19439d66140d7d.js"/>
     <script type="module">
-    alert("test");
-        import init, { get_nonce } from "./chuck-wallet-df19439d66140d7d.js";
 
-        async function run() {
-            await init("./chuck-wallet-df19439d66140d7d_bg.wasm"); // Initialize WASM
-            const result = get_nonce(); // Call the function
-            console.log("Result from WASM:", result);
-            alert("hello");
-        }
+      alert("test");
 
-        run();
-        </script>
+      //THIS IS NECESSARY
+      window.addEventListener("TrunkApplicationStarted", (event) => {
+          const wasm = event.detail.wasm; // Access the WASM module
+          const nonce = wasm.get_nonce(); // Call the function
+          console.log("Result from WASM:", nonce);
+          alert("hello");
+      });
+      </script>
         <body>
         <div id="top">
             <h1 style="font-size: 3vw">Chuck Coin</h1>
