--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <link rel="modulepreload" href="./chuck-wallet-df19439d66140d7d.js"/>
     <script type="module">
 
-      alert("test");
 
       //THIS IS NECESSARY
       window.addEventListener("TrunkApplicationStarted", (event) => {
           const wasm = event.detail.wasm; // Access the WASM module
           const nonce = wasm.get_nonce(); // Call the function
-          console.log("Result from WASM:", nonce);
-          alert("hello");
+          document.getElementById("nonce").innerText = "0x" + nonce.toString(16);
+          //alert("hello");
       });
       </script>
         <body>
