--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
                 width="100px"
             />
         </div>
+
+        <div>
         <h2 id="loading">
             Loading blockchain from server...
             <img src="assets/spinner.gif" style="height: 1em; vertical-align: middle;">
         </h2>
+        <div id="server-down" style="display: none">
+            <img src="assets/server-down.jpg">
+            <br>
+            <b>^ Probably the fucking server rn</b>
+        </div>
 
         <div id = "content" style = "display: none">
         <label id = "login">
